save my advance

--- a/Argile/Makefile
+++ b/Argile/Makefile
@@ -1,7 +1,6 @@
-#CC = g++
 CC = gcc
 #CFLAGS = -Wall -Wextra -std=c99 -O2 -I/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/include/c++/v1/
-CFLAGS = -Wall -Wextra -std=c99 -O2 -I raylib/src -L raylib/src
+CFLAGS = -Wall -Wextra -std=c99 -O2 -I raylib/include -L raylib/lib
 #LDFLAGS = -lraylib -framework OpenGL -framework Cocoa -framework IOKit -framework CoreVideo
 LDFLAGS = -lraylib -lm
 
