--- a/proj/Makefile
+++ b/proj/Makefile
@@ -1,9 +1,8 @@
-#CC = g++
-CC = gcc
+CC = g++
 #CFLAGS = -Wall -Wextra -std=c99 -O2 -I/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/include/c++/v1/
-CFLAGS = -Wall -Wextra -std=c99 -O2 -I raylib/src -L raylib/src
+CFLAGS = -Wall -Wextra -std=c99 -O2 -I raylib/include -L raylib/lib
 #LDFLAGS = -lraylib -framework OpenGL -framework Cocoa -framework IOKit -framework CoreVideo
-LDFLAGS = -lraylib -lm
+LDFLAGS = -lraylib -lX11 -lXrandr -lm
 
 SRC_DIR = src
 OBJ_DIR = obj
